use KeyserverSyncWorker for updating keys in the foreground, too

--- a/OpenKeychain/src/main/res/values/strings.xml
+++ b/OpenKeychain/src/main/res/values/strings.xml
@@ -2026,6 +2026,11 @@
     <string name="snack_keylist_clipboard_action">View</string>
 
     <string name="notify_channel_keysync">Keyserver update</string>
+    <string name="notify_channel_keysync_foreground">Keyserver foreground update</string>
     <string name="notify_title_keysync">Updating keys…</string>
+    <string name="notify_title_keysync_finished">Finished updating %d keys</string>
     <string name="notify_content_keysync">Key %d / %d</string>
+    <string name="snack_keysync_start">Started updating all keys…</string>
+    <string name="snack_keysync_finished">Key update successful</string>
+    <string name="snack_keysync_error">An error occurred while updating all keys</string>
 </resources>
